# echelon

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARENA.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  dashboard.html  pyproject.toml  server.py  viewer.html
.claude/agents/: drl-expert.md  drl-test-engineer.md  elspeth-ux-specialist.md  pytorch-expert.md  simulation-systems-specialist.md  ux-specialist.md  voxel-systems-specialist.md
.mypy_cache/3.12/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _contextvars.data.json  _contextvars.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _io.data.json  _io.meta.json  _pickle.data.json  _pickle.meta.json  _queue.data.json  _queue.meta.json  _sitebuiltins.data.json  _sitebuiltins.meta.json  _socket.data.json  _socket.meta.json  _ssl.data.json  _ssl.meta.json  _thread.data.json  _thread.meta.json  _warnings.data.json  _warnings.meta.json  _weakref.data.json  _weakref.meta.json  _weakrefset.data.json  _weakrefset.meta.json  (+88 more)
.mypy_cache/3.12/_typeshed/: __init__.data.json  __init__.meta.json  importlib.data.json  importlib.meta.json
.mypy_cache/3.12/asyncio/: __init__.data.json  __init__.meta.json  base_events.data.json  base_events.meta.json  (+36 more)
docs/: GLOSSARY.md  README.md  RISK_REGISTER.md  drone-system-plan.md  drone-variants-brainstorm.md  mech-tactics-drl-demo.md  terrain-2.1-plan.md  test-implementation-plan.md  test-plan-review.md  test-suite-analysis.md  test-suite-design.md
docs/adr/: .gitkeep  001-why-voxels.md  README.md  TEMPLATE.md
docs/analysis/: 2025-12-25-combat-suite-observation-architecture.md  analysis.md
docs/arch-analysis-2025-12-24-0627/: 00-coordination.md  01-discovery-findings.md  02-subsystem-catalog.md  03-diagrams.md  04-final-report.md  05-quality-assessment.md  06-architect-handover.md  07-technical-debt-catalog.md  08-improvement-roadmap.md
docs/architecture/: .gitkeep  nav-graph-v0.md  terrain-generation-v2.md
docs/bugs/: README.md  TEMPLATE_BUG.md  TEMPLATE_ENH.md  TEMPLATE_JANK.md  TEMPLATE_WONTFIX.md  batch1_pytorch_review.md  batch2_pytorch_review.md  batch3_drl_review.md  batch3_pytorch_review.md  batch4_drl_review.md  batch4_pytorch_review.md
docs/guides/: .gitkeep  wandb-dashboard.md
docs/plans/: 2024-12-24-project-professionalization-design.md  2025-12-24-reward-curriculum-design.md  2025-12-26-consolidated-improvement-plan.md  2025-12-26-wandb-metrics-integration.md  2025-12-27-role-specific-rewards-draft.md  2025-12-27-self-play-lieutenant-heuristic.md  2025-12-27-track-store-design.md  2025-12-28-arena-public-dashboard.md  2025-12-28-formation-mode-rewards.md  2025-12-28-lr-entropy-decay-schedules.md  2025-12-28-paint-reward-enhancement.md  2025-12-29-game-based-curriculum-ramp.md  living-grid-nav-integration.md
docs/reference/: analysis.md
docs/reports/: TRIAGE.md  batch1_drl_review.md  batch2_drl_review.md
echelon/: __init__.py  actions.py  config.py  constants.py
echelon/agents/: __init__.py  heuristic.py
echelon/arena/: __init__.py  glicko2.py  history.py  league.py  match.py  stats.py
echelon/env/: __init__.py  env.py  observations.py  rewards.py  sensor.py
echelon/nav/: graph.py  planner.py
echelon/rl/: __init__.py  lstm_state.py  model.py  suite.py  suite_model.py
echelon/server/: __init__.py  __main__.py  config.py  models.py  nav_cache.py  sse.py  world_cache.py
echelon/sim/: __init__.py  los.py  mech.py  projectile.py  sim.py  world.py
echelon/training/: __init__.py  evaluation.py  normalization.py  ppo.py  rollout.py  spatial.py  stats_collector.py  vec_env.py
scripts/: arena.py  check_invariants.py  eval_policy.py  reproduce_from_replay.py  smoke.py  terrain_audit.py  terrain_golden.py  test_mechanics.py  test_obs_hull.py  train_ppo.py
tests/: conftest.py  test_sim_mechanics.py
tests/benchmark/: __init__.py  test_los_perf.py  test_nav_perf.py
tests/e2e/: __init__.py  conftest.py
tests/integration/: test_3d_nav.py  test_arena_selfplay.py  test_convergence.py  test_golden.py  test_learning.py
tests/performance/: test_benchmark.py
tests/unit/: test_api_fuzzing.py  test_arena_league.py  test_arena_match.py  test_collision_masks.py  test_destruction.py  test_determinism.py  test_episode_stats.py  test_gen_properties.py  test_glicko2.py  test_gradient_flow.py  test_ground_layer.py  test_invariants.py  test_los.py  test_lstm_state.py  test_mechanics.py  test_nav.py  test_nav_graph.py  test_observations.py  test_observations_refactor.py  test_properties.py  test_rewards.py  test_suite.py  test_temporal.py  test_world_generation.py
(+223 files in other folders)
