[project]
name = "echelon"
version = "0.0.0"
description = "Rapid prototype DRL mech tactics demo"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi>=0.125.0",
  "numpy>=2.1",
  "pydantic-settings>=2.12.0",
  "requests>=2.32.5",
  "torch>=2.6",
  "uvicorn>=0.38.0",
  "wandb>=0.19.1",
  "websockets>=13.0",
]

[dependency-groups]
dev = [
  "hypothesis>=6.0",
  "pytest>=8.0",
  "ruff>=0.8",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["echelon"]

[tool.ruff]
line-length = 110

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["mutants", "scripts", ".venv", ".hypothesis", "runs", "__pycache__"]

[tool.mutmut]
paths_to_mutate = ["echelon/sim/sim.py", "echelon/gen/layout.py", "echelon/gen/biomes.py"]
tests_dir = ["tests/unit"]
copy_dirs = ["tests", "echelon"]
runner = "PYTHONPATH=. pytest -x tests/unit"
debug = true
