[project]
name = "echelon"
version = "0.1.0"
description = "Educational DRL environment for mech tactics — learn to build AI that learns the art of war"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "John Morrissey", email = "john@foundryside.dev"}
]
keywords = [
    "reinforcement-learning",
    "deep-learning",
    "pytorch",
    "game-ai",
    "simulation",
    "voxel",
    "multi-agent",
    "self-play",
    "educational",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Games/Entertainment :: Simulation",
]
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi>=0.128.0",
  "matplotlib>=3.10.0",
  "numba>=0.63.0",
  "numpy>=2.3.0,<2.4",
  "pydantic-settings>=2.8.0",
  "requests>=2.32.0",
  "scipy>=1.15.0",
  "torch>=2.9.0",
  "uvicorn>=0.40.0",
  "wandb>=0.19.0",
  "websockets>=15.0",
]

[project.urls]
Homepage = "https://github.com/tachyon-beep/echelon"
Repository = "https://github.com/tachyon-beep/echelon"
Issues = "https://github.com/tachyon-beep/echelon/issues"

[dependency-groups]
dev = [
  "hypothesis>=6.148.0",
  "mypy>=1.16.0",
  "pre-commit>=4.2.0",
  "pytest-timeout>=2.4.0",
  "pytest>=8.4.0",
  "pytest-cov>=7.0.0",
  "pytest-playwright>=0.7.0",
  "ruff>=0.11.0",
  "vulture>=2.14",
  "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["echelon"]

[tool.ruff]
line-length = 110
target-version = "py313"

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # pyflakes
  "I",      # isort
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "UP",     # pyupgrade
  "SIM",    # flake8-simplify
  "TCH",    # flake8-type-checking
  "RUF",    # ruff-specific rules
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "B008",   # function calls in default arguments (common in FastAPI)
  "SIM108", # ternary operator (often less readable)
]

[tool.ruff.lint.isort]
known-first-party = ["echelon"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false  # Start permissive, tighten incrementally
check_untyped_defs = true
ignore_missing_imports = true  # For third-party libs without stubs
show_error_codes = true
pretty = true

# Per-module overrides for incrementally strict typing
[[tool.mypy.overrides]]
module = "echelon.config"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "echelon.actions"
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["mutants", "scripts", ".venv", ".hypothesis", "runs", "__pycache__"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: marks tests as E2E browser tests (deselect with '-m \"not e2e\"')",
    "visual: marks tests as visual regression tests",
]
addopts = "--cov=echelon --cov-report=term-missing --cov-fail-under=0"

[tool.coverage.run]
source = ["echelon"]
omit = ["echelon/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.vulture]
paths = ["echelon"]
min_confidence = 80
exclude = ["echelon/__pycache__"]

[tool.mutmut]
paths_to_mutate = ["echelon/sim/sim.py", "echelon/gen/layout.py", "echelon/gen/biomes.py"]
tests_dir = ["tests/unit"]
copy_dirs = ["tests", "echelon"]
runner = "PYTHONPATH=. pytest -x tests/unit"
debug = true
